# anjab-abk-backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-entrypoint.sh  pyproject.toml  requirements-test.txt
.github/workflows/: release.yml  test.yml
migrations/: env.py
migrations/versions/: 20260623_b2bbd3afbe65_initial_schema.py  20260625_a1c4e7f9b2d6_backfill_partisipan_authentik_subject.py  20260625_d3e6f1a8b9c2_drop_unit_from_ti_sesi.py  20260702_c822a30d6b39_tambah_tabel_opm_sesi_task_responden_.py  20260704_0a58616358f4_ts_hapus_sesi_penugasan_berbasis_.py  20260712_0c932069e90e_tambah_nilai_standar_calhr_di_uraian_.py  (+5 more)
scripts/: backup.sh  export_openapi.py  make_migration.sh  purge_task_catalog.py  restore.sh  seed_catalog.py
src/anjab_abk_backend/: __init__.py  db.py  (+17 more)
tests/: _opm_common.py  conftest.py  test_auth_guards.py  test_authentik_provisioner.py  test_dcs_analisis.py  test_dcs_instrumen.py  test_dcs_responden.py  test_dcs_scoring.py  test_dcs_sesi.py  test_dcs_subskala.py  test_hasil_responden_otorisasi.py  test_jabatan.py  test_jenjang_pendidikan.py  test_mata_pelajaran.py  test_migrations.py  test_opm_analisis.py  test_opm_responden.py  test_opm_sesi.py  test_pagination.py  test_partisipan.py  test_seed_firstrun.py  test_sekolah.py  test_sesi_cascade.py  test_sme_panel.py  test_system.py  test_taskinv.py  test_taskinv_master.py  test_ts_kuesioner.py  test_ts_log.py  test_ts_penugasan.py  test_ts_responden.py  test_ts_sesi.py  test_wcp_analisis.py  test_wcp_dimensi.py  test_wcp_instrumen.py  test_wcp_responden.py  test_wcp_scoring.py  test_wcp_sesi.py
(+176 files in other folders)
