[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anjab-abk-backend"
dynamic = ["version"]
description = "Backend REST API untuk ANJAB (Analisis Jabatan) dan ABK (Analisis Beban Kerja) yayasan pendidikan."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tim Pengembang", email = "dev@example.com" }]
keywords = ["fastapi", "backend", "rest-api", "anjab", "abk", "yayasan", "pendidikan"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: FastAPI",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "orjson>=3.10,<4.0",
]

[project.urls]
Homepage = "https://github.com/OWNER/anjab-abk-backend"
Repository = "https://github.com/OWNER/anjab-abk-backend"
Issues = "https://github.com/OWNER/anjab-abk-backend/issues"

[tool.hatch.version]
path = "src/anjab_abk_backend/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/anjab_abk_backend"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["anjab_abk_backend"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
